atualizando SecurityConfiguration